app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.cardBack {
  transform: rotateY(180deg);
  background-color: #ebf4ff;
}

.cardBack.flipped {
  transform: rotateY(0deg);
}

.cardFront {
  transform: rotateY(0deg);
}

.cardFront.flipped {
  transform: rotateY(180deg);
}

.cardBack,
.cardFront {
  transition: transform 0.5s ease;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.playlist-button {
  transition: all 0.2s ease;
}

.playlist-button:hover {
  transform: scale(1.1);
  box-shadow: 0 0 10px white;
}

